Fix spot name overflowing into finished at

--- a/views/map.sass
+++ b/views/map.sass
@@ -26,7 +26,14 @@ html, body
   margin-bottom: 5px
   position: relative
 
-.session-details--location
+.session-details--spot
+  width: 65%
+  overflow: hidden
+  text-overflow: ellipsis
+  display: block
+  white-space: nowrap
+
+.session-details--finished-at
   position: absolute
   right: 0
   bottom: 0
